# OpenGL_cmake_base

./: .gitignore  CMakeLists.txt
res/shaders/: basic.shader
src/: gl_util.cpp  gl_util.h  main.cpp
